Continued refactoring.